# DataShield

./: .dockerignore  .gitignore  COMPARISON.md  Dockerfile  METRICS.md  README.md  demo.ipynb  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements-streamlit.txt  requirements.txt  run_demo.py  streamlit_app.py
.github/workflows/: docker.yml  lint.yml  load-test.yml  test.yml
.streamlit/: config.toml
benchmarks/: BENCHMARK.md
docs/: blog_post_1_ml_anomaly_detection.md  blog_post_2_probabilistic_propagation.md  blog_post_3_bfs_optimization.md
helm/datashield/: Chart.yaml  values.yaml
helm/datashield/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  (+3 more)
scripts/: download_data.py
src/api/: main.py
src/contracts/: __init__.py  examples.py  registry.py  validator.py
src/eval/: __init__.py  evaluate.py  fault_injection.py  real_data.py
src/gnn/: __init__.py  cascade_predictor.py
src/lineage/: __init__.py  blast_radius.py  database.py  graph_optimizer.py
src/ml_features/: ml_anomaly_detector.py
src/observability/: __init__.py  tracing.py
src/quality_engine/: __init__.py  anomaly_detector.py  schema.py
src/remediation/: __init__.py  actions.py  engine.py
src/streaming/: __init__.py  kafka_consumer.py  kafka_producer.py  schema_registry_client.py
tests/chaos/: conftest.py  test_chaos_resilience.py
tests/integration/: test_lineage_graph.py
tests/load/: load_test_100k_tables.py
tests/unit/: test_eval_injected_faults.py  test_graph_optimizer.py  test_ml_anomaly_detector.py  test_quality_engine.py
